Fix hero spacing for mobile and tablet

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ main {
 
 .wrapper {
     width: 100%;
-    max-width: var(--container-width-mobile);
+    width: var(--container-width-mobile);
     margin-inline: auto;
 }
 
@@ -116,25 +116,25 @@ footer svg:hover path {
 .hero {
     text-align: center;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    flex-direction: row-reverse;
+    /* outline: 2px solid blue; */
     /* min-height: 120vw; */
     /* outline: 2px solid red; */
-    min-height: 85vh;
+    min-height: 85vw;
     /* max-height: 100%; */
+    margin-top: 60vw;
 }
 
 .hero div {
     /* outline: 2px solid orange; */
 }
 
-.hero__image {
-    /* Flex item */
+/* .hero__image {
     flex-grow: 3;
     flex-shrink: 1;
     padding: 0;
     min-height: 400px;
-}
+} */
 
 .hero__image img {
     position: absolute;
@@ -155,6 +155,10 @@ footer svg:hover path {
     flex-shrink: 1;
     text-align: center;
     /* outline: 2px solid green; */
+}
+
+.hero__text > * {
+    margin: 0;
 }
 
 .hero__headline {
@@ -234,7 +238,6 @@ footer svg:hover path {
     justify-content: space-between;
     align-items: center;
 }
-
 
 
 .projects__box img {
@@ -451,7 +454,7 @@ a.underline--animated:hover:after {
     /* Small tablet and above */
     
     .wrapper {
-        width: var(--container-width-tablet);
+        min-width: var(--container-width-tablet);
     }
 
     .header__nav {
@@ -467,12 +470,8 @@ a.underline--animated:hover:after {
     }
 
     .hero {
-        /* Flex container  */
-        flex-direction: row-reverse;
+        margin-top: 0;
         /* outline: 2px solid blue; */
-        min-height: 0;
-        height: 600px;
-        align-items: center;
     }
 
     div.hero__image {
@@ -480,13 +479,10 @@ a.underline--animated:hover:after {
         flex-grow: 10;
     }
     div.hero__text {
-        /* outline: 4px solid orange; */
-        flex-grow: 1;
+        /* outline: 4px solid green; */
         max-width: 60%;
-        align-self: stretch;
         margin: 0;
         justify-content: center;
-
     }
 
     .hero__image {
@@ -495,6 +491,7 @@ a.underline--animated:hover:after {
     }
 
     .hero__image img {
+        width: 45%;
         translate: 0;
         left: auto;
         right: 0;
@@ -508,7 +505,7 @@ a.underline--animated:hover:after {
         /* outline: 2px solid lime; */
         /* padding-bottom: 200px; */
         width: 58vw;
-        justify-content: stretch;
+
     }
 
     .hero__text * {
@@ -529,7 +526,6 @@ a.underline--animated:hover:after {
     }
     .experience {
         font-size: var(--fs-h1);
-        margin-top: 1em;           /* Scaling up with font size */
         padding: 20px 0;
         text-align: start;
     }
@@ -556,6 +552,9 @@ a.underline--animated:hover:after {
     
     .projects__box {
         flex-basis: 45%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 }
 
@@ -563,10 +562,14 @@ a.underline--animated:hover:after {
 
     /* Desktop */
     .wrapper {
-        width: 77%;
+        min-width: var(--container-width-desktop);
     }
 
     .header__home {}
 
     .header__nav {}
+
+    .hero__image img {
+        width: 30%;
+    }
 }
